gap fix

--- a/scss/screen-sizes/tablet/_tablet.scss
+++ b/scss/screen-sizes/tablet/_tablet.scss
@@ -495,13 +495,15 @@ h2 {
         margin: 40px auto 0 auto;
 
         @supports not (gap: 20px) {
-            > *:not(:first-child):nth-child(odd) {
+            // Add margin-left and margin-bottom to every even element
+            > *:nth-child(2n) {
+                margin-left: 20px;
                 margin-bottom: 20px;
             }
     
-            > *:nth-child(n + 2) {
+            // Add margin-bottom to every odd element
+            > *:nth-child(2n+1) {
                 margin-bottom: 20px;
-                margin-left: 20px;
             }
         }
 
